# sgc-challenge

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README  README.md  build.sh  build_all.sh  challenge.backup  challenge.cpp
.devcontainer/: devcontainer.json
docker/: CMakeLists.txt  Dockerfile  Makefile
